fix: fix des warnings avant push